# rinha-de-backend-fastapi

./: .env  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4240006860fc_create_index_for_search_feature.py  6a5186e11e8f_create_user_table.py
rinha/api/: deps.py  main.py
rinha/core/: config.py
rinha/crud/: __init__.py  base.py  crud_pessoa.py
rinha/db/: base.py  base_class.py  cache.py  init_db.py  session.py
rinha/models/: pessoa.py
rinha/schemas/: pessoa.py
