[tool.poetry]
name = "rinha"
version = "0.1.0"
description = ""
authors = ["Fellipe Sebastiam <sebastiampereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
redis = "^5.0.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
isort = "^5.12.0"
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
